SFDCProject/src/objects/Service_Contract_Partner_Rel__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Service_Contract_Partner_Rels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BP_Contact_Email__c</fullName>
        <label>BP Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Completion_Package_Approved__c</fullName>
        <label>Completion Package Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Package_Rec_d__c</fullName>
        <label>Completion Package Rec&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISA_Granted__c</fullName>
        <label>ISA Granted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISA_Requested__c</fullName>
        <label>ISA Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoices_Processed__c</fullName>
        <label>Invoices Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PR_PO__c</fullName>
        <label>PR/PO #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photos_Shared_with_BP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photos Shared with BP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Passed_Audit__c</fullName>
        <label>Project Passed Audit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work__c</fullName>
        <label>Scope of Work</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipName>Service_Contract_Partner_Rels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcontract_Material_Received__c</fullName>
        <label>Subcontract Material Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subcontract_Material_Shipped__c</fullName>
        <label>Subcontract Material Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subcontract_Material_Tracking_Number__c</fullName>
        <label>Subcontract Material Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcontract_Sent__c</fullName>
        <label>Subcontract Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subcontract_Signed__c</fullName>
        <label>Subcontract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subcontracted_Dollar_Amt__c</fullName>
        <label>Subcontracted Dollar Amt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Subcontractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Subcontractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Waterproofing Subcontractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Related Partner</label>
    <nameField>
        <displayFormat>SCPR{00000000}</displayFormat>
        <label>Service Contract Partner Rel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>